@@ -79,6 +79,8 @@ This file is generated! See scripts/docs_collector.py
 .3+|   |<<metricbeat-metricset-mongodb-collstats,collstats>>   
 |<<metricbeat-metricset-mongodb-dbstats,dbstats>>   
 |<<metricbeat-metricset-mongodb-status,status>>   
+|<<metricbeat-module-munin,Munin>>  experimental[]   |    
+.1+|   |<<metricbeat-metricset-munin-node,node>> experimental[]  
 |<<metricbeat-module-mysql,MySQL>>     |    
 .1+|   |<<metricbeat-metricset-mysql-status,status>>   
 |<<metricbeat-module-nginx,Nginx>>     |    
@@ -147,6 +149,7 @@ include::modules/kubernetes.asciidoc[]
 include::modules/logstash.asciidoc[]
 include::modules/memcached.asciidoc[]
 include::modules/mongodb.asciidoc[]
+include::modules/munin.asciidoc[]
 include::modules/mysql.asciidoc[]
 include::modules/nginx.asciidoc[]
 include::modules/php_fpm.asciidoc[]
