@@ -1,0 +1,2 @@
+MUNIN_HOST=munin
+MUNIN_PORT=4949
