@@ -1,0 +1,15 @@
+setsid 0
+
+ignore_file [\#~]$
+ignore_file DEADJOE$
+ignore_file \.bak$
+ignore_file %$
+ignore_file \.dpkg-(tmp|new|old|dist)$
+ignore_file \.rpm(save|new)$
+ignore_file \.pod$
+
+allow .*
+
+host 0.0.0.0
+
+port 4949
