@@ -1,0 +1,2 @@
+// Package munin is a Metricbeat module that contains MetricSets.
+package munin
