@@ -1,0 +1,6 @@
+- module: munin
+  metricsets: ["node"]
+  enabled: false
+  period: 10s
+  hosts: ["localhost:4949"]
+  node.namespace: node
